# song-ranking-mobile-app

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 894c3069fb96_rename_rating_event_metadata.py  9a1b2c3d4e5f_add_song_provider_refs.py  a1b2c3d4e5f6_add_profile_avatar_color.py  a2b3c4d5e6f7_add_preview_url_expires_at_to_songs.py  a3c8e5f7d2b9_add_musicbrainz_identity_columns.py  a3d9f1e7c2b8_add_user_streaks_table.py  a5b6c7d8e9f0_add_global_rating_sum_to_songs.py  a7b8c9d0e1f2_extend_reports_for_rating_notes.py  a81f4d2c9e0b_add_songs_table.py  a9c8e7d6f5b4_add_rating_event_metadata.py  b2c3d4e5f6a7_add_auxstrology_snapshots.py  b4d9f1e6a7c2_add_new_releases_table.py  b6c7d8e9f0a1_add_song_enrichment_status.py  b6d8f3a7c9e1_add_rankings_and_rating_events.py  b7c8d9e0f1a2_add_follows_table.py  b8c9d0e1f2a3_add_event_capture_fields.py  c2d3e4f5a6b7_add_user_similarity_snapshots.py  c3d4e5f6a7b8_add_interaction_events.py  c4175b34d60b_fix_hashed_password_column_length.py  c5e8a2d9f4b1_add_login_attempts_table.py  c9d0e1f2a3b4_add_feed_indexes.py  d1e2f3a4b5c6_add_decision_duration_ms_to_comparisons.py  d3a5a3d36582_add_users_table.py  d4e5f6a7b8c9_add_profile_timezone.py  d4f7a9c2b8e6_add_comparison_sessions_and_comparisons.py  d6e7f8a9b0c1_add_artist_credit_tables.py  d9e0f1a2b3c4_constrain_event_capture_fields.py  e2a4f9c8d1b7_widen_deezer_ids_to_bigint.py  e3f4a5b6c7d8_add_global_aggregate_scores_to_songs.py  e536cd197b13_rename_saved_songs_to_bookmarks.py  e5f6a7b8c9d0_add_visibility_blocks_age_gate.py  e6f7a8b9c0d1_add_saved_songs.py  e7a1c9f2b4d6_add_likes_table.py  f0a1b2c3d4e5_add_comparison_sessions_updated_at_index.py  f1a2b3c4d5e6_add_notifications_table.py  f2b9d4a1c7e3_add_password_reset_tables.py  f4a5b6c7d8e9_add_feed_latest_event_index.py  f6a7b8c9d0e1_add_reports_table.py  f7b3d1a9c5e2_add_profile_hide_like_counts.py  f99b444fc62b_add_profiles_table.py
backend/scripts/: demo_seed_data.py  seed_dev_demo.py
backend/src/api_routers/: auth.py  bookmarks.py  circle_aggregates.py  comparison.py  comparison_history.py  events.py  feed.py  like.py  new_release.py  notification.py  popular.py  profile.py  rating.py  saved_songs.py  search.py  social_discovery.py  song.py
backend/src/core/: config.py  dependencies.py  limiter.py  security.py
backend/src/crud/: account_deletion.py  artist.py  auxstrology.py  block.py  bookmarks.py  circle_aggregates.py  comparison.py  comparison_history.py  feed.py  follow.py  interaction_event.py  like.py  login_attempt.py  new_release.py  notification.py  password_reset.py  password_reset_request.py  popular.py  profile.py  profile_modules.py  rating.py  report.py  saved_songs.py  similarity.py  social_access.py  social_discovery.py  song.py  song_provider_ref.py  streak.py  taste.py  user.py
backend/src/data/: auxstrology_pools.py  genre_trait_priors.py
backend/src/db/: base.py  session.py
backend/src/models/: user.py
backend/src/pydantic_schemas/: auth.py  auxstrology.py  bookmarks.py  circle.py  comparison.py  comparison_history.py  events.py  feed.py  like.py  new_release.py  notification.py  popular.py  profile.py  profile_modules.py  rating.py  saved_songs.py  search.py  social_discovery.py  song.py  streak.py  user.py
backend/src/repositories/: user.py
backend/src/routers/: auth.py
backend/src/schemas/: user.py
backend/src/services/: access.py  auth.py  auxstrology.py  bookmarks.py  circle_aggregates.py  comparison.py  comparison_history.py  email.py  entitlements.py  events.py  feed.py  like.py  musicbrainz.py  musicbrainz_tasks.py  new_release.py  notification.py  popular.py  profile.py  profile_modules.py  provider_catalog.py  pwned_passwords.py  rating.py  saved_songs.py  search.py  search_annotations.py  similarity_tasks.py  social_discovery.py  song.py  song_matching.py  streak.py  taste.py
backend/src/services/similarity/: __init__.py  v1_cosine.py
backend/src/sqlalchemy_tables/: artist.py  auxstrology_snapshot.py  block.py  bookmark.py  comparison.py  comparison_session.py  follow.py  interaction_event.py  like.py  login_attempt.py  new_release.py  notification.py  password_reset_request.py  password_reset_token.py  profile.py  ranking.py  rating_event.py  report.py  saved_song.py  song.py  song_provider_ref.py  user.py  user_similarity_snapshot.py  user_streak.py
backend/tests/: conftest.py  test_account_deletion.py  test_aggregate_scores.py  test_atomicity.py  test_auth.py  test_auxstrology.py  test_bookmarks.py  test_circle_access.py  test_circle_aggregates.py  test_comparison.py  test_comparison_history.py  test_compatibility.py  test_email.py  test_feed.py  test_feed_modules.py  test_follow.py  test_likes.py  test_most_compatible.py  test_musicbrainz.py  test_new_release.py  test_notifications.py  test_password_reset.py  test_popular.py  test_preview_url.py  test_profile.py  test_profile_bookmarked.py  test_profile_edit.py  test_profile_modules.py  test_profile_user_stats.py  test_provider_refs.py  test_pwned_passwords.py  test_rating.py  test_reports.py  test_saved_songs.py  test_search.py  test_security.py  test_security_hardening.py  test_seed_dev_demo.py  test_signal_capture.py  test_similarity.py  (+6 more)
docs/launch/: profile-identity-data-map.md
frontend/: .env.example  .env.production  App.tsx  app.json  babel.config.js  eas.json  jest.setup.js  package-lock.json  package.json
frontend/__mocks__/: react-native-reanimated.js
frontend/src/: theme.ts
frontend/src/api/: client.ts
frontend/src/components/: AppLoading.tsx  Arrow.tsx  Avatar.tsx  BackToTopButton.tsx  BouncyPressable.tsx  BucketBadge.tsx  DiamondScore.tsx  DriftingStars.tsx  EndOfListCap.tsx  FindYourPeopleCard.tsx  GlowingMeterTick.tsx  HatchBox.tsx  LockIcon.tsx  PulsingMeterTick.tsx  ScoreArc.tsx  StarAvatar.tsx
frontend/src/constants/: keys.ts
frontend/src/hooks/: useAudioPlayer.ts  useBackToTop.ts  usePullRefresh.ts  useScoresLocked.ts
(+131 files in other folders)
