[project]                                                                                                                                          
name = "listn-api"                                                                                                                                 
version = "0.1.0"                                                                                                                                  
description = "LISTn API — FastAPI backend for the LISTn song ranking app"                                                                         
readme = "README.md"                        
requires-python = ">=3.11"   

# =============================================================================                                                                    
# Runtime Dependencies — installed in all environments
# =============================================================================                                                                    
dependencies = [
    "alembic>=1.18.4",                  # database migrations — tracks schema changes over time
    "fastapi>=0.135.2",                 # web framework — defines API endpoints
    "psycopg2-binary>=2.9.11",          # PostgreSQL driver — connects SQLAlchemy to Postgres
    "pydantic-settings>=2.13.1",        # reads .env file into typed Python settings
    "sqlalchemy>=2.0.48",               # ORM — Python classes instead of raw SQL queries
    "uvicorn[standard]>=0.42.0",        # ASGI server — runs FastAPI with hot reload
    "bcrypt>=4.0.0",                    # password hashing — bcrypt is slow by design (brute-force resistant)
    "python-jose[cryptography]>=3.3.0", # JWT encode/decode — signs tokens with your secret key
    "slowapi>=0.1.9",                 # rate limiting middleware for FastAPI
    "pydantic[email]>=2.12.5",        # enables EmailStr validation in Pydantic schemas
    "httpx>=0.28.1",                  # server-side external API calls, starting with Deezer search
    "sentry-sdk[fastapi]>=2.0.0",     # error monitoring — reports unhandled exceptions to the listn-backend Sentry project
]

# =============================================================================                                                                    
# Dev Dependencies — only installed locally, never in production
# =============================================================================  
[dependency-groups]
dev = [
    "ruff>=0.11.0",    # linter — catches unused imports, style errors, import ordering
    "pytest>=9.0.2",   # test framework
]

# =============================================================================                                                                    
# Tool Configuration
# ============================================================================= 
[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I"]  # E=style errors, F=pyflakes (unused imports etc), I=import sorting

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]  # scripts adjust sys.path before importing src

[tool.pytest.ini_options]
testpaths = ["tests"]   # tells pytest where to look for tests
pythonpath = ["."]      # adds backend/ to sys.path so `import main` and `import src` work
                                                                                                                                                                                                                                                                                          
